fix(expansion-panel): title text not centered with taller description
Fixes the expansion panel's title not being centered vertically if the description is taller.

--- a/src/material/expansion/expansion-panel-header.scss
+++ b/src/material/expansion/expansion-panel-header.scss
@@ -44,6 +44,7 @@
   display: flex;
   flex-grow: 1;
   margin-right: 16px;
+  align-items: center;
 
   [dir='rtl'] & {
     margin-right: 0;
